--- a/post_farm/src/.env
+++ b/post_farm/src/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL= "http://localhost:8080"
+REACT_APP_API_URL= "jdbc:postgresql://klychg.postgres.database.azure.com:5432/postgres"
 
